HP Improvements - Add scroll bar into the tab content in protocolEditor - Prevent "Wt." and "Req." fields to go out of screen when constraint value is long - Add "starts with" and "ends with" comparators - Fix the issue with empty input value in ruleEntryDialog

--- a/Packages/ohif-hanging-protocols/client/components/ruleTable/ruleTable.styl
+++ b/Packages/ohif-hanging-protocols/client/components/ruleTable/ruleTable.styl
@@ -33,6 +33,14 @@ table.ruleTable
 
       td:first-child
         text-align: left
+        overflow-wrap: break-word
+        word-wrap: break-word
+        -ms-word-break: break-word
+        word-break: break-word
+        -ms-hyphens: auto
+        -moz-hyphens: auto
+        -webkit-hyphens: auto
+        hyphens: auto
 
 .addRuleContainer
   margin: 10px 0
